# dgswem

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build_stampede.sh  build_stampede_debug.sh  change_fortran_comments.sh  dgswem_example.tgz  dgswem_example_16.tgz  dgswem_example_4.tgz  environment_gcc.yml  environment_intel.yml  intel.ini  meson.build  meson.options  wind_notes.txt
.github/workflows/: ci.yml  precommit.yml
Neches_test/Neches_June30/: ._fort copy.14  ._fort.13  ._fort.14  ._fort.15  ._fort.16  ._fort.17  ._fort.19  ._fort.20  ._fort.63  ._fort.64  ._fort.dg  ._fort_OLD.14  DG.63  DG.64  DG.65  fort.13  fort.15  fort.4l  fort.62  fort.63  fort.64  fort.82  fort.88  fort.89  fort.dg  maxele.63  run.timing  submit_adcprep  submit_padcirc  vel_stat.151
Neches_test/Neches_June30/working_inp/: ._fort.13  ._fort.14  ._fort.15  ._fort.19  ._fort.20  ._fort.dg  fort.15  fort.19  fort.20  fort.dg
dgswem_example/: fort.15
dgswem_hybrid/src/: LDG_hydro.F  dgswem.F  fparser.F90  global.F  harm.F  internal_edge_hydro.F  land_edge_hydro.F  nodalattr.F  rhs_dg_hydro.F
dgswem_hybrid/work/: cmplrflags.mk
error/: CMakeLists.txt  error.F90  error.inp  version.F90
error/work/: Makefile
for_GNU_compilers/src/: dg.F  dgswem.F
for_GNU_compilers/work/: cmplrflags.mk
inlet_2/: fort.15  metis_graph.txt
meshes/dgswem_example/: fort.14  fort.dg
meshes/inlet_2/: fort.80  fort.dg
metis/Lib/: proto.h  rename.h  util.c
prep/: #adcprep.F#  CMakeLists.txt  adcpost.F  adcprep.F  cfl_prep.F  compare.F  decomp.F  metis.F  namo.py  post.F  post_global.F  pre_global.F  prep.F  read_global.F
river_bc/: ._fort.14  ._fort.15  DG.63  fort.15  fort.16  fort.4l  fort.63  fort.64  fort.68  fort.82  fort.89  maxele.63
river_bc_BENCHMARK_DO_NOT_CHANGE/: ._fort.14  ._fort.15  ._fort.20  ._fort.63  DG.63  DG.64  fort.14  fort.16  fort.20  fort.4l  fort.62  fort.89  maxele.63
scripts/: compare_fort63.py  compare_fort63_4.py  environment.rostam_vtune  run_dgswem-hpx.sh  sed_vars.bash
src/: #DG_hydro_timestep.F#  #LDG_hydro.F#  #read_input.F#  .#LDG_hydro.F  ._DG_hydro_timestep.F  ._DG_timestep.F  ._LDG_hydro.F  ._couple2swan.F  ._create_edge_data.F  ._cstart.F  ._dg.F  ._dgswem.F  ._diff45_41.F  ._edge_int_hydro.F  ._flow_edge_hydro.F  ._global.F  ._global_3dvs.F  ._globalio.F  ._ibarrier_edge_hydro.F  ._ibarrier_fluxes.F  ._internal_edge_hydro.F  ._land_edge_hydro.F  ._messenger.F  ._messenger_elem.F  ._met_forcing.F  ._numerical_flux.F  ._ocean_edge_hydro.F  ._orthogonal_basis_v1.F  ._prep_DG.F  ._radiation_edge_hydro.F  ._read_fort_dg.F90  ._read_input.F  ._rhs_dg_hydro.F  ._wetdry.F  ._wind.F  ._write_output.F  ._write_results.F  .gitignore  CMakeLists.txt  DG_hydro_timestep.F  (+216 more)
src/Eirik_DG_SWEM/: ._Eirik_DG_SWEM.xcodeproj
src/Eirik_DG_SWEM/Eirik_DG_SWEM.xcodeproj/: ._project.xcworkspace  project.pbxproj
src/Eirik_DG_SWEM/Eirik_DG_SWEM.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/Eirik_DG_SWEM/Eirik_DG_SWEM.xcodeproj/project.xcworkspace/xcuserdata/eirik.xcuserdatad/: UserInterfaceState.xcuserstate
src/dgswem/: meson.build
src/dgswem_hpx/: domain_reference.hpp  fortran_initializer.hpp
src/dgswem_lgd_dataflow/: domain_reference.hpp  fortran_initializer.hpp
src/not_used/: alloc_main.f95  edge_int_hydro.f95  harm.f95  modal2nodal.f95  sta_location.f95
src/post/: meson.build
src/prep/: meson.build
subprojects/metis/: meson.build
swan/: SwanBpntlist.f90  SwanCheckGrid.f90  SwanCompUnstruc.f90  SwanCompdata.f90  SwanComputeForce.f90  SwanMaxOverNodes.f90  SwanMinOverNodes.f90  SwanSumOverNodes.f90  SwanSweepSel.f90  SwanTranspAc.f90  macros.inc  ocpmix.f  swancom1.f  swancom3.f  swanmain.f  swanout1.f  swanparll.f  swanpre1.f  swanser.f  swmod1.f  swmod2.f
tests/: conftest.py  test_run.py  util.py
tests/slopingbeach/: fort.dg  slopingbeach.py
work/: ._bench_screen_out.txt  ._cmplrflags.mk  ._fort.14  ._fort.15  ._fort.16  ._fort.20  ._fort.63  ._fort.64  ._fort.80  ._fort.dg  ._fort.dg_keyword  ._makefile  ._makefile.unix  ._maxele.63  .gitignore  DG.63  DG.64  Initial_Bathymetry.114  Initial_Conditions.163  Initial_Conditions.164  TestCG2DPP.m  bench_screen_out.txt  check_pp.m  cmplrflags.mk  cmplrflags.zachtop.mk  col.crs  colnew.crs  colpp.crs  csrloc_test.txt  dgfd_ver1.txt  dgfd_ver2.txt  elem_table.txt  fd_pp_fort14.m  fort.14  fort.14_16  fort.14_32  fort.14_64  fort.14_8  fort.15  fort.16  (+36 more)
work/closed domain/: ._fort.14  ._fort.15  fort.15
work/open domain/: ._fort.14
work/pp_testcase/: DG.63  DG.64  MCGlocal.txt  TestCG2DPP.m  check_pp.m  col.crs  colpp.crs  csrloc_test.txt  elem_table.txt  fd_pp_fort14.m  fort.14  fort.15  fort.15original  fort.16  fort.17  fort.61  fort.62  fort.64  fort.88  fort.dg  nneigh_elem.txt  prestest.txt  ptr.crs  ptrpp.crs  tecplot.out  test_csr_setup.m  val.crs  valnew.crs  valpp.crs
work/rain_closed_domain/: ._fort.14  ._fort.15  fort.15
work/rain_open_domain/: ._fort.14  ._fort.15  fort.14  fort.15
work/river_closed_domain/: ._fort.14  ._fort.15  ._fort.20  fort.14  fort.15
work/testcasesteven/: fort.14  fort.15  fort.16  fort.17  fort.4l  fort.61  fort.62  fort.63  fort.64  fort.89
